# amalgum

./: Cargo.toml
crates/amalgam-cli/: Cargo.toml
crates/amalgam-cli/src/: lib.rs  main.rs  manifest.rs  vendor.rs
crates/amalgam-cli/tests/: k8s_cross_version_imports.rs  trace_imports.rs  unified_pipeline_test.rs  unified_url_imports_test.rs
crates/amalgam-codegen/src/: go.rs  nickel.rs  resolver.rs
crates/amalgam-core/src/: dependency_analyzer.rs  types.rs
crates/amalgam-parser/src/: crd.rs  fetch.rs  go.rs  go_ast.rs  imports.rs  k8s_imports.rs  k8s_types.rs  lib.rs  openapi.rs  package.rs  package_walker.rs
crates/amalgam-parser/src/walkers/: crd.rs  mod.rs  openapi.rs
crates/amalgam-parser/tests/: import_resolution_test.rs  integration_test.rs  practical_usage_snapshot_test.rs  snapshot_test.rs
crates/amalgam-parser/tests/snapshots/: practical_usage_snapshot_test__generated_test_package.snap  practical_usage_snapshot_test__generated_test_type.snap  practical_usage_snapshot_test__package_structure.snap  snapshot_test__arrays_nickel.snap  snapshot_test__multi_version_all.snap  snapshot_test__multiple_k8s_refs_nickel.snap  snapshot_test__simple_crd_ir.snap  snapshot_test__simple_crd_nickel.snap  snapshot_test__simple_with_k8s_imports.snap  snapshot_test__simple_with_k8s_imports.snap.new  snapshot_test__validation_nickel.snap
