[workspace]
resolver = "2"
members = [
    "crates/amalgam-core",
    "crates/amalgam-parser",
    "crates/amalgam-codegen",
    "crates/amalgam-daemon",
    "crates/amalgam-cli",
]

[workspace.metadata.release]
shared-version = true
consolidate-commits = true
pre-release-commit-message = "release: version {{version}}"
tag-prefix = "v"
tag-name = "{{prefix}}{{version}}"

[workspace.metadata.crane]
name = "amalgam"

[workspace.package]
version = "0.6.4"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/seryl/amalgam"

[workspace.dependencies]
# Core parsing and AST manipulation
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

# Schema handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
openapiv3 = "2.0"

# Kubernetes integration
kube = { version = "0.95", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["latest"] }

# Nickel integration
nickel-lang-package = "0.3.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-forest = { version = "0.1", features = ["tokio"] }
tracing-chrome = "0.7"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Testing
proptest = "1.5"
insta = { version = "1.41", features = ["yaml"] }

# HTTP client for parser
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }

# Development tools
tempfile = "3.14"
tokio-test = "0.4"
wiremock = "0.6"
pretty_assertions = "1.4"

# Progress indicators
indicatif = "0.17"

# Async utilities
futures = "0.3"

# Terminal detection
atty = "0.2"

# Internal workspace dependencies
amalgam-core = { version = "0.6.4", path = "crates/amalgam-core" }
amalgam-parser = { version = "0.6.4", path = "crates/amalgam-parser" }
amalgam-codegen = { version = "0.6.4", path = "crates/amalgam-codegen" }
amalgam-daemon = { version = "0.6.4", path = "crates/amalgam-daemon" }
