[package]
name = "amalgam"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
description = "Type-safe configuration generator for Nickel from various schema sources"
homepage = "https://github.com/seryl/amalgam"
repository = "https://github.com/seryl/amalgam"
documentation = "https://docs.rs/amalgam"
readme = "README.md"
keywords = ["nickel", "kubernetes", "crd", "openapi", "configuration"]
categories = ["command-line-utilities", "development-tools", "config"]

[lib]
name = "amalgam"
path = "src/lib.rs"

[[bin]]
name = "amalgam"
path = "src/main.rs"

[dependencies]
amalgam-core.workspace = true
amalgam-parser.workspace = true
amalgam-codegen.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-forest.workspace = true
tracing-chrome.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
openapiv3.workspace = true
toml = "0.8"
chrono = "0.4"
serde.workspace = true
tempfile.workspace = true
walkdir = "2.4"